# gs_videoReport

./: .gitignore  CHANGELOG-zh.md  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_HANDOFF.md  HOTFIX_COMPLETION_SUMMARY.md  Makefile  README-zh.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  SCOPE_CLEANUP_REPORT.md  config.yaml  config.yaml.example  config_demo.yaml  multi_key_config.yaml.example  pyproject.toml  test_config.yaml  test_config_v2.yaml  test_videos.py
.bmad-core/: install-manifest.yaml
docs/: API_KEY_SETUP.md  DEV_SETUP_GUIDE.md  DOCUMENTATION_UPDATE_REPORT.md  OAUTH_INTEGRATION.md  README.md  architecture.md  brainstorm.md  brief.md  prd.md
output/: 007_-_what-is-lo-fi-wireframe-vs-high-fidelity-in-_20250818_1637_lesson_plan.md  007_-_what-is-lo-fi-wireframe-vs-high-fidelity-in-_20250818_1648_lesson_plan.md
schemas/: config.schema.json  prompt-template.schema.json
scripts/: api_quota_monitor.py  security_check.py  validate_setup.py
test_configs/: performance_test.yaml
test_output/: .gitkeep
tests/: comprehensive_qa_results.json  comprehensive_qa_tests.py  execute_qa_tests.py  final_qa_report.md  qa_batch_test_strategy.md  qa_completion_summary.md  qa_final_report.md  qa_improvements_report.md  qa_setup_instructions.md  qa_test_plan.md  qa_test_results.json  quality_gates_definition.md  real_gemini_batch_test_report.json  real_video_performance_benchmark.json  real_video_qa_comprehensive_report_20250818_203056.json  run_batch_qa_tests.py  run_real_video_qa_tests.py  test_batch_error_handling.py  test_batch_performance.py  (+11 more)
(+159 files in other folders)
